--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head></head>
+<title>HTML Tutorial</title>
 <body>
-	<h1>header</h1>
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
 </body>
 </html>
