Added validator and picture

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
-<body>
+	<title>Title</title>
+	<body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+		<img src="https://lh3.googleusercontent.com/-w_Q3P2Z1X7E/TkSTCnD15YI/AAAAAAAACQk/hil44kBNyncY1SDi5iWgzPoKFteXqT2mACEwYBhgL/w140-h139-p/profile.jpg"/>
+		<h1>Ochirsuren Surakhbayar</h1>
+		<ul>
+			<li>Home Page</li>
+			<li>About Me</li>
+			<li>Recipe</li>
+			<li>Movie Review</li>
+		</ul>
 
+		<a href="http://validator.w3.org/check/referer"> <img
+			src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+			alt="html validator"/></a>
 </body>
 </html>
