--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
-	<title>Title</title>
+<html lang="en">
+	<head>
+		<title>Ochirsuren S</title>
+		<meta charset="UTF-8">
+	</head>
 	<body>
-
-		<img src="https://lh3.googleusercontent.com/-w_Q3P2Z1X7E/TkSTCnD15YI/AAAAAAAACQk/hil44kBNyncY1SDi5iWgzPoKFteXqT2mACEwYBhgL/w140-h139-p/profile.jpg"/>
+		<img src="https://lh3.googleusercontent.com/-w_Q3P2Z1X7E/TkSTCnD15YI/AAAAAAAACQk/hil44kBNyncY1SDi5iWgzPoKFteXqT2mACEwYBhgL/w140-h139-p/profile.jpg" alt="Ochiroo"/>
 		<h1>Ochirsuren Surakhbayar</h1>
 		<ul>
 			<li>Home Page</li>
@@ -11,9 +13,8 @@
 			<li>Recipe</li>
 			<li>Movie Review</li>
 		</ul>
-
 		<a href="http://validator.w3.org/check/referer"> <img
 			src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-			alt="html validator"/></a>
-</body>
+		alt="html validator"/></a>
+	</body>
 </html>
