--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<li>Recipe</li>
 			<li>Movie Review</li>
 		</ul>
-		<a href="http://validator.w3.org/check/referer"> <img
+		<a href="https://validator.w3.org/check?uri=https://ochiroo13.github.io"> <img
 			src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
 		alt="html validator"/></a>
 	</body>
