--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
 	<head>
 		<title>Ochirsuren S</title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+		<link href="styles/index.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
-		<img src="https://lh3.googleusercontent.com/-w_Q3P2Z1X7E/TkSTCnD15YI/AAAAAAAACQk/hil44kBNyncY1SDi5iWgzPoKFteXqT2mACEwYBhgL/w140-h139-p/profile.jpg" alt="Ochiroo"/>
-		<h1>Ochirsuren Surakhbayar</h1>
-		<ul>
-			<li><a href="https://ochiroo13.github.io">Home Page</a></li>
-			<li>About Me</li>
-			<li><a href="pie.html">Recipe</a></li>
-			<li>Movie Review</li>
-		</ul>
+		<header>
+			<h1>Ochirsuren Surakhbayar</h1>
+		</header>
+		<div class="sub-header">
+			<img id ="profile" src="https://lh3.googleusercontent.com/-w_Q3P2Z1X7E/TkSTCnD15YI/AAAAAAAACQk/hil44kBNyncY1SDi5iWgzPoKFteXqT2mACEwYBhgL/w140-h139-p/profile.jpg" alt="Ochiroo"/>
+		</div>
+		<div class="row">
+			<div class="col-md-3 left-menu">
+				<ul>
+					<li><a href="https://ochiroo13.github.io">Home Page</a></li>
+					<li><a href="aboutme.html">About Me</a></li>
+					<li><a href="pie.html">Recipe</a></li>
+					<li>Movie Review</li>
+				</ul>
+			</div>
+			<div class="col-md-9 content">
+				<p>Hello world</p>
+			</div>
+		</div>
 		<footer>
 			<a href="https://validator.w3.org/check?uri=https://ochiroo13.github.io"> <img
 				src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
