--- a/pie.html
+++ b/pie.html
@@ -19,14 +19,69 @@
 			<li>3 <u>tbsp</u> cornstrach</li>
 			<li>1/4 <u>tsp</u> salt</li>
 			<li>1 1/2 cups water</li>
-			<li>2 lemons, juiced </li>
-			<li>1 cup white sugar</li>
-			<li>1 cup white sugar</li>
+			<li>2 lemons, juiced and zested</li>
+			<li>2 <u>tbsp</u> butter</li>
+			<li>4 egg yolks, beaten</li>
+			<li>1 (9 inch) pie crust, baked</li>
+			<li>4 egg whites</li>
+			<li>6 <u>tbsp</u> white sugar</li>
 		</ul>
-		<footer>
+		<h2><p>DIRECTIONS</p></h2>
+		<ol>
+			<li><b>Preheat Oven:</b> Preheat oven to 350 degree F (175 degree C).</li>
+			<li>
+				<b>Make Lemon Filling:</b> In medium saucepan ...
+				<ul>
+					<li>Whisk together 1 cup sugar, flour, cornstrach, and salt.</li>
+					<li>Stir in water, lemon juice and lemon zest.</li>
+					<li>Cook over medium-high heat, stirring frequently, until mixture comes to boil.</li>
+					<li>Stir in butter.</li>
+					<li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
+					<li>Wisk egg yolk mixture back into remaining sugar mixture.</li>
+					<li>Bring to boil and continue to cook while stirring constantly until thick.</li>
+					<li>Remove from heat.</li>
+					<li>Pour filling into baked pastry shell.</li>
+				</ul>
+			</li>
+			<li>
+				<b>Make Meringue:</b> In large glass or metal bowl ...
+				<ul>
+					<li>Whip egg whites until foamy.</li>
+					<li>Add sugar gradually, and conitune to whip until stiff peaks form.</li>
+					<li>Spread meringue over pie, sealing the edges at the crust.</li>
+				</ul>
+			</li>
+			<li><b>Bake:</b> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
+		</ol>
+		<p>This is our favorite recipe here at Granny's pie. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and easy to follow; it's piece of <s>cake</s> pie!</p>
+		<h2><p>USER COMMENTS</p></h2>
+		<blockquote>This is very fun recipe to follow, Because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk
+			<br/>
+			<br/>
+			- Emilie S.
+		</blockquote>
+		<blockquote>
+			Q: What do you call an ape who loves pie?
+			<br/>
+			A: Meringue-utan.
+			<br/>
+			<br/>
+			- Vickie K.
+		</blockquote>
+		<blockquote>
+			This site can <b>engage</b> my interest. Follow the recipe above and <b>make it so!</b> This pie is <b>number one.</b>
+			<br/>
+			<br/>
+			- Jean-Luc Piecard
+		</blockquote>
+		<h2><p>LINKS</p></h2>
+		<a href="https://www.google.com/">Search for other lemon meringue pie recipes</a>
+		<br/>
+		<a href="index.html">Home</a>
+		<footer  style="text-align: right;">
 			<a href="https://validator.w3.org/check?uri=https://ochiroo13.github.io"> <img
-			src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-		alt="html validator"/></a>
+				src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+			alt="html validator"/></a>
 		</footer>
 	</body>
 </html>
