--- a/aboutme.html
+++ b/aboutme.html
@@ -65,10 +65,10 @@
 					<a href="https://validator.w3.org/check?uri=https://ochiroo13.github.io"> <img
 						src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
 					alt="html validator"/></a>
-					<a href="http://jigsaw.w3.org/css-validator/check/referer">
-						<img src=http://jigsaw.w3.org/css-validator/images/vcss
-						alt="Valid CSS!"/>
-					</a>
+				<a href="https://jigsaw.w3.org/css-validator/validator?uri=ochiroo13.github.io%2Faboutme.html">
+					<img src=http://jigsaw.w3.org/css-validator/images/vcss
+					alt="Valid CSS!"/>
+				</a>
 				</div>
 			</div>
 		</footer>
