--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<li><a href="https://ochiroo13.github.io">Home Page</a></li>
 					<li><a href="aboutme.html">About Me</a></li>
 					<li><a href="pie.html">Recipe</a></li>
-					<li>Movie Review</li>
+					<li><a href="tmnt.html">Movie Review</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
