--- a/pie.html
+++ b/pie.html
@@ -7,14 +7,15 @@
 		<link href="styles/recipe.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
-		<h1><p >Grandma's Lemon Meringue Pie</p></h1>
+		<h1><a>Grandma's Lemon Meringue Pie</a></h1>
 		<img src="resources/images/pie.jpg" alt="Pie"/>
 		<p>One 9-inch pie</p>
 		<p>30 Min - Prep time</p>
 		<p>10 Min - Cook time</p>
 		<p>40 Min - Total</p>
 		<p>8 Servings</p>
-		<h2><p>INGREDIENTS</p></h2>
+		<hr>
+		<h2><a>INGREDIENTS</a></h2>
 		<ul>
 			<li>1 cup white sugar</li>
 			<li>
@@ -30,7 +31,8 @@
 		<li>4 egg whites</li>
 		<li>6 <abbr title="tablespoon">tbsp</abbr> white sugar</li>
 	</ul>
-	<div><h2><p>DIRECTIONS</p></h2></div>
+	<hr>
+	<div><h2><a>DIRECTIONS</a></h2></div>
 	<ol>
 		<li><b>Preheat Oven:</b> Preheat oven to 350 degree F (175 degree C).</li>
 		<li>
@@ -58,7 +60,8 @@
 		<li><b>Bake:</b> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
 	</ol>
 	<p>This is our favorite recipe here at Granny's pie. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and easy to follow; it's piece of <s>cake</s> pie!</p>
-	<h2><p>USER COMMENTS</p></h2>
+	<hr>
+	<h2><a>USER COMMENT</a></h2>
 	<blockquote>This is very fun recipe to follow, Because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk
 		<br/>
 		<br/>
@@ -78,7 +81,8 @@
 		<br/>
 		- Jean-Luc Piecard
 	</blockquote>
-	<h2><p>LINKS</p></h2>
+	<hr>
+	<h2><a>LINKS</a></h2>
 	<a href="https://www.google.com/">Search for other lemon meringue pie recipes</a>
 	<br/>
 	<a href="index.html">Home</a>
