--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<li><a href="aboutme.html">About Me</a></li>
 					<li><a href="pie.html">Recipe</a></li>
 					<li><a href="tmnt.html">Movie Review</a></li>
+					<li><a href="signup.html">Grades Exercises</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
