--- a/tmnt.html
+++ b/tmnt.html
@@ -99,6 +99,9 @@
 					</div>
 				</div>
 			</div>
+			<div class="footer-section">
+				<p id="paging">(1-10) of 88</p>
+			</div>
 		</div>
 		<footer>
 			<div class="row" style="text-align: right;">
