--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 					<li><a href="aboutme.html">About Me</a></li>
 					<li><a href="pie.html">Recipe</a></li>
 					<li><a href="tmnt.html">Movie Review</a></li>
-					<li><a href="signup.html">Grades Exercises</a></li>
+					<li><a href="grades.html">Grades Exercises</a></li>
+					<li><a href="signup.html">Nerd Luv</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
