--- a/signup.html
+++ b/signup.html
@@ -68,9 +68,15 @@
 			<img id="back-img" src="resources/images/Homework4/back.png"><a href="index.html">Back to front page</a>
 		</form>
 		<footer>
-			<a href="https://validator.w3.org/check?uri=https://ochiroo13.github.io"> <img
-				src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-			alt="html validator"/></a>
+				<div class="col-md-12">
+					<a href="https://validator.w3.org/check?uri=https://ochiroo13.github.io"> <img
+						src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+					alt="html validator"/></a>
+					<a href="https://jigsaw.w3.org/css-validator/validator?uri=ochiroo13.github.io%2Fsignup.html">
+						<img src=http://jigsaw.w3.org/css-validator/images/vcss
+						alt="Valid CSS!"/>
+					</a>
+				</div>
 		</footer>
 	</body>
 </html>
