--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<li><a href="tmnt.html">Movie Review</a></li>
 					<li><a href="grades.html">Grades Exercises</a></li>
 					<li><a href="signup.html">Nerd Luv</a></li>
+					<li><a href="statequiz.html">State Management Quiz</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
