--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 					<li><a href="grades.html">Grades Exercises</a></li>
 					<li><a href="signup.html">Nerd Luv</a></li>
 					<li><a href="statequiz.html">State Management Quiz</a></li>
+					<li><a href="jsp_intro_quiz.html">JSP Introduction Quiz</a></li>
+					<li><a href="jsp_customtag_quiz.html">JSP Custom Tags Quiz</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
