--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 					<li><a href="statequiz.html">State Management Quiz</a></li>
 					<li><a href="jsp_intro_quiz.html">JSP Introduction Quiz</a></li>
 					<li><a href="jsp_customtag_quiz.html">JSP Custom Tags Quiz</a></li>
+
+					<li><a href="mid_exam_mock.html">Mock exam</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
