--- a/jsp_customtag_quiz.html
+++ b/jsp_customtag_quiz.html
@@ -62,13 +62,13 @@
 				<h3>7. What does the operation getJspContext().getOut().write(“Hi Bob”) do when called in a doTag() method?</h3>
 			</div>
 			<div class="col-md-9 single-row">
-				<p></p>
+				<p>It writes to HTML</p>
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>8. What does the operation getJspBody().invoke(null) do when called in a doTag() method?</h3>
 			</div>
 			<div class="col-md-9 single-row">
-				<p></p>
+				<p>The invoke method directs all output to a supplied writer or to the JspWriter returned by the getOut method of the JspContext associated with the tag handler if the writer is null.</p>
 			</div>
 		</div>
 		<footer>
