--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 					<li><a href="statequiz.html">State Management Quiz</a></li>
 					<li><a href="jsp_intro_quiz.html">JSP Introduction Quiz</a></li>
 					<li><a href="jsp_customtag_quiz.html">JSP Custom Tags Quiz</a></li>
+					<li><a href="lab5a.html">Javascript Exercises (Lab 5a)</a></li>
+					<li><a href="onclick_alert.html">OnClick Alert</a></li>
+					<li><a href="tip_calc_exer.html">Tip Calculator Exercises</a></li>
 
 					<li><a href="mid_exam_mock.html">Mock exam</a></li>
 				</ul>
