--- a/mid_exam_mock.html
+++ b/mid_exam_mock.html
@@ -21,6 +21,15 @@
 				font-weight: normal;
 				font-size: 14px;
 			}
+			#hehe {
+				height: 300px;
+				width: 100px;
+				padding: 0px;
+				margin: 6px;
+				border: 2px solid black;
+				background-color: yellow;
+				position: static;
+			}
 		</style>
 	</head>
 	<body>
@@ -30,6 +39,7 @@
 		<div class="sub-header">
 			<img id ="profile" src="https://lh3.googleusercontent.com/-w_Q3P2Z1X7E/TkSTCnD15YI/AAAAAAAACQk/hil44kBNyncY1SDi5iWgzPoKFteXqT2mACEwYBhgL/w140-h139-p/profile.jpg" alt="Ochiroo"/>
 		</div>
+		<div id="hehe"></div>
 		<div class="row">
 			<ol>
 				<ol>
