--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 					<li><a href="jsp_customtag_quiz.html">JSP Custom Tags Quiz</a></li>
 					<li><a href="lab5a.html">Javascript Exercises (Lab 5a)</a></li>
 					<li><a href="onclick_alert.html">OnClick Alert</a></li>
-					<li><a href="tip_calc_exer.html">Tip Calculator Exercises</a></li>
-
-					<li><a href="mid_exam_mock.html">Mock exam</a></li>
+					<li><a href="Tip Calculator.html">Tip Calculator Exercises</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
