Homework: Text Decorator, Javascript questions

--- a/Text Decorator.html
+++ b/Text Decorator.html
@@ -21,11 +21,17 @@
 	</fieldset>
 	<fieldset>
 		<legend>Decoration</legend>
-		<div>
+		<div class="row">
 			<button type="button" onclick="biggerDecoration()">Bigger Decorations!</button>
 		</div>
-		<div>
+		<div class="row">
 			<label><input type="checkbox" id="bling" onchange="blingChanged()">Bling</label>
+		</div>
+		<div class="row">
+			<button type="button" onclick="doIgpayAtinlay()">Igpay Atinlay</button>
+		</div>
+		<div class="row">
+			<button type="button" onclick="doMalkovich()">Malkovich</button>
 		</div>
 		
 	</fieldset>
