--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<li><a href="onclick_alert.html">OnClick Alert</a></li>
 					<li><a href="Tip Calculator.html">Tip Calculator Exercises</a></li>
 					<li><a href="Text Decorator.html">Text decorator</a></li>
+					<li><a href="JavascriptTimerExercise.html">Answer: Javascript Timer Exercises</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
