--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<li><a href="Tip Calculator.html">Tip Calculator Exercises</a></li>
 					<li><a href="Text Decorator.html">Text decorator</a></li>
 					<li><a href="JavascriptTimerExercise.html">Answer: Javascript Timer Exercises</a></li>
+					<li><a href="ascii.html">Animation viewer</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
