--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 					<li><a href="Text Decorator.html">Text decorator</a></li>
 					<li><a href="JavascriptTimerExercise.html">Answer: Javascript Timer Exercises</a></li>
 					<li><a href="ascii.html">Animation viewer</a></li>
+					<li><a href="modules&closure.html">Modules and Closure Lab</a></li>
+					<li><a href="Javascript Scope Exercises.html">Javascript Scope Exercises</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
