--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					<li><a href="ascii.html">Animation viewer</a></li>
 					<li><a href="modules&closure.html">Modules and Closure Lab</a></li>
 					<li><a href="Javascript Scope Exercises.html">Javascript Scope Exercises</a></li>
+					<li><a href="Javascript Module Exercises.html">Javascript Module Exercises</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
