--- a/Javascript Module Exercises.html
+++ b/Javascript Module Exercises.html
@@ -24,48 +24,166 @@
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>1. Determine what this Javascript code will print out (without running it):</h3>
+				<pre>
+x = 1;
+var a = 5;
+var b = 10;
+var c = function(a, b, c) {
+	document.write(x);
+	document.write(a);
+	var f = function(a, b, c) {
+		b = a;
+		document.write(b);
+		b = c;
+		var x = 5;
+	}
+	f(a,b,c);
+	document.write(b);
+	var x = 10;
+}
+c(8,9,10);
+document.write(b);
+document.write(x);
+				</pre>
 			</div>
 			<div class="col-md-9 single-row">
-				<p></p>
+				<hr>
+			</div>
+			<div class="col-md-9 single-row">
+				<p>It'll print undefined 8 8 9 10 1</p>
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>2. Define Global Scope and Local Scope in Javascript.</h3>
 			</div>
 			<div class="col-md-9 single-row">
-				<p></p>
+				<hr>
+			</div>
+			<div class="col-md-9 single-row">
+				<pre>
+var globalScope;
+function myFunc() {
+	var localScope;
+}
+				</pre>
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>3. Consider the following structure of Javascript code:</h3>
+				<pre>
+// Scope A
+function XFunc () {
+	// Scope B
+	function YFunc () {
+		// Scope C
+	};
+};
+(a) Do statements in Scope A have access to variables defined in Scope B and C?
+(b) Do statements in Scope B have access to variables defined in Scope A?
+(c) Do statements in Scope B have access to variables defined in Scope C?
+(d) Do statements in Scope C have access to variables defined in Scope A?
+(e) Do statements in Scope C have access to variables defined in Scope B?
+				</pre>
 			</div>
 			<div class="col-md-9 single-row">
-				<p></p>
+				<hr>
+			</div>
+			<div class="col-md-9 single-row">
+a. No<br>
+b. Yes<br>
+c. No<br>
+d. Yes<br>
+e. Yes
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>4. What will be printed by the following (answer without running it)?</h3>
+				<pre>
+var x = 9;
+function myFunction() {
+	return x * x;
+}
+document.write(myFunction());
+x = 5;
+document.write(myFunction());
+				</pre>
 			</div>
 			<div class="col-md-9 single-row">
-				<p></p>
+				<hr>
+			</div>
+			<div class="col-md-9 single-row">
+				<p>81 25</p>
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>5. What will the alert print out? (Answer without running the code. Remember ‘hoisting’.)?</h3>
+				<pre>
+var foo = 1;
+function bar() {
+	if (!foo) {
+		var foo = 10;
+	}
+	alert(foo);
+}
+bar();
+				</pre>
+			</div>
+			<div class="col-md-9 single-row">
+				<hr>
+			</div>
+			<div class="col-md-9 single-row">
+				<p>10</p>
+			</div>
+			<div class="col-md-9 single-row">
+				<h3>6. Consider the following definition of an add() function to increment a counter variable:</h3>
+				<pre>
+var add = (function () {
+	var counter = 0;
+	return function () {
+		return counter += 1;
+	}
+})();
+				</pre>
+				<p>Modify the above module to define a count object with two methods: add() and reset(). The count.add() method adds one to the counter (as above). The count.reset() method sets the counter to 0.</p>
+			</div>
+			<div class="col-md-9 single-row">
+				<hr>
+			</div>
+			<div class="col-md-9 single-row">
+				<pre>
+var Module = (function() {
+	var counter = 0;
+	var add = function () {
+        counter += 1;
+		return counter;
+	};
+	var reset = function () {
+        counter = 0
+		return counter;
+	};
+	return {
+		add: add(),
+		reset: reset()
+	}
+})();
+				</pre>
+			</div>
+			<div class="col-md-9 single-row">
+				<h3>7. In the definition of add() shown in question 6, identify the "free" variable. In the context of a function closure, what is a "free" variable?</h3>
+			</div>
+			<div class="col-md-9 single-row">
+				<hr>
 			</div>
 			<div class="col-md-9 single-row">
 				<p></p>
 			</div>
 			<div class="col-md-9 single-row">
-				<h3>6. Consider the following definition of an add( ) function to increment a counter variable:</h3>
+				<h3>8. The add() function defined in question 6 always adds 1 to the counter each time it is called. Write a definition of a function make_adder(inc), whose return value is an add function with increment value inc (instead of 1). Here is an example of using this function:</h3>
+				<pre>
+add5 = make_adder(5);
+add5(); add5(); add5(); // final counter value is 15
+add7 = make_adder(7);
+add7(); add7(); add7(); // final counter value is 21
+				</pre>
 			</div>
 			<div class="col-md-9 single-row">
-				<p></p>
-			</div>
-			<div class="col-md-9 single-row">
-				<h3>7. In the definition of add( ) shown in question 6, identify the "free" variable. In the context of a function closure, what is a "free" variable?</h3>
-			</div>
-			<div class="col-md-9 single-row">
-				<p></p>
-			</div>
-			<div class="col-md-9 single-row">
-				<h3>8. The add( ) function defined in question 6 always adds 1 to the counter each time it is called. Write a definition of a function make_adder(inc), whose return value is an add function with increment value inc (instead of 1). Here is an example of using this function:</h3>
+				<hr>
 			</div>
 			<div class="col-md-9 single-row">
 				<p></p>
@@ -74,10 +192,29 @@
 				<h3>9. Suppose you are given a file of Javascript code containing a list of many function and variable declarations. All of these function and variable names will be added to the Global Javascript namespace. What simple modification to the Javascript file can remove all the names from the Global namespace?</h3>
 			</div>
 			<div class="col-md-9 single-row">
+				<hr>
+			</div>
+			<div class="col-md-9 single-row">
 				<p></p>
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>10. Using the Revealing Module Pattern, write a Javascript definition of a Module that creates an Employee Object with the following fields and methods:</h3>
+				<pre>
+Private Field: name
+Private Field: age
+Private Field: salary
+Public Method: setAge(newAge)
+Public Method: setSalary(newSalary)
+Public Method: setName(newName)
+Private Method: getAge()
+Private Method: getSalary()
+Private Method: getName()
+Public Method: increaseSalary(percentage) // uses private getSalary()
+Public Method: incrementAge() // uses private getAge()
+				</pre>
+			</div>
+			<div class="col-md-9 single-row">
+				<hr>
 			</div>
 			<div class="col-md-9 single-row">
 				<p></p>
@@ -86,34 +223,87 @@
 				<h3>11. Rewrite your answer to Question 10 using the Anonymous Object Literal Return Pattern.</h3>
 			</div>
 			<div class="col-md-9 single-row">
+				<hr>
+			</div>
+			<div class="col-md-9 single-row">
 				<p></p>
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>12. Rewrite your answer to Question 10 using the Locally Scoped Object Literal Pattern</h3>
 			</div>
 			<div class="col-md-9 single-row">
+				<hr>
+			</div>
+			<div class="col-md-9 single-row">
 				<p></p>
 			</div>
 			<div class="col-md-9 single-row">
-				<h3>13. Write a few Javascript instructions to extend the Module of Question 10 to have a public address field and public methods setAddress(newAddress) and getAddress( ).</h3>
+				<h3>13. Write a few Javascript instructions to extend the Module of Question 10 to have a public address field and public methods setAddress(newAddress) and getAddress().</h3>
+			</div>
+			<div class="col-md-9 single-row">
+				<hr>
 			</div>
 			<div class="col-md-9 single-row">
 				<p></p>
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>14. What is the output of the following code?</h3>
+				<pre>
+const promise = new Promise((resolve, reject) => {
+	reject(“Hattori”);
+});
+promise.then(val => alert(“Success: “ + val))
+	.catch(e => alert(“Error: “ + e));
+				</pre>
+			</div>
+			<div class="col-md-9 single-row">
+				<hr>
 			</div>
 			<div class="col-md-9 single-row">
 				<p></p>
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>15. What is the output of the following code?</h3>
+				<pre>
+const promise = new Promise((resolve, reject) => {
+	resolve(“Hattori”);
+	setTimeout(()=> reject(“Yoshi”), 500);
+});
+promise.then(val => alert(“Success: “ + val))
+	.catch(e => alert(“Error: “ + e));
+				</pre>
+			</div>
+			<div class="col-md-9 single-row">
+				<hr>
 			</div>
 			<div class="col-md-9 single-row">
 				<p></p>
 			</div>
 			<div class="col-md-9 single-row">
 				<h3>16. What is the output of the following code?</h3>
+				<pre>
+function job(state) {
+	return new Promise(function(resolve, reject) {
+		if (state) {
+			resolve('success');
+		} else {
+			reject('error');
+		}
+	});
+}
+let promise = job(true);
+promise.then(function(data) {
+	console.log(data);
+	return job(false);
+})
+.catch(function(error) {
+	console.log(error);
+	return 'Error caught';
+});
+				</pre>
+			</div>
+			<div class="col-md-9 single-row">
+				<hr>
 			</div>
 			<div class="col-md-9 single-row">
 				<p></p>
