The Amazing Mouse Maze!

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 					<li><a href="modules&closure.html">Modules and Closure Lab</a></li>
 					<li><a href="Javascript Scope Exercises.html">Javascript Scope Exercises</a></li>
 					<li><a href="Javascript Module Exercises.html">Javascript Module Exercises</a></li>
+					<li><a href="Maze!.html">Mouse Maze Lab</a></li>
+					<li><a href="JQueryQuiz1.html">jQuery Quiz I</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
