--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 					<li><a href="Javascript Module Exercises.html">Javascript Module Exercises</a></li>
 					<li><a href="Maze!.html">Mouse Maze Lab</a></li>
 					<li><a href="JQueryQuiz1.html">jQuery Quiz I</a></li>
+					<li><a href="JQueryQuiz2.html">jQuery Quiz II</a></li>
+					<li><a href="fifteen.html">Fifteen Puzzle</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
