jQuery Quiz III

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 					<li><a href="JQueryQuiz1.html">jQuery Quiz I</a></li>
 					<li><a href="JQueryQuiz2.html">jQuery Quiz II</a></li>
 					<li><a href="fifteen.html">Fifteen Puzzle</a></li>
+					<li><a href="JQueryQuiz3.html">jQuery Quiz III</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 content">
